--- a/vagrant/Automated_provisioning_WinMacIntel/Vagrantfile
+++ b/vagrant/Automated_provisioning_WinMacIntel/Vagrantfile
@@ -14,27 +14,27 @@ Vagrant.configure("2") do |config|
 
   end
   
-### Memcache vm  #### 
-  config.vm.define "mc01" do |mc01|
-    mc01.vm.box = "eurolinux-vagrant/centos-stream-9"
-    mc01.vm.hostname = "mc01"
-    mc01.vm.network "private_network", ip: "192.168.56.14"
-    mc01.vm.provider "virtualbox" do |vb|
-     vb.memory = "600"
-   end
-    mc01.vm.provision "shell", path: "memcache.sh"  
-  end
+# ### Memcache vm  #### 
+#   config.vm.define "mc01" do |mc01|
+#     mc01.vm.box = "eurolinux-vagrant/centos-stream-9"
+#     mc01.vm.hostname = "mc01"
+#     mc01.vm.network "private_network", ip: "192.168.56.14"
+#     mc01.vm.provider "virtualbox" do |vb|
+#      vb.memory = "600"
+#    end
+#     mc01.vm.provision "shell", path: "memcache.sh"  
+#   end
   
-### RabbitMQ vm  ####
-  config.vm.define "rmq01" do |rmq01|
-    rmq01.vm.box = "eurolinux-vagrant/centos-stream-9"
-  rmq01.vm.hostname = "rmq01"
-    rmq01.vm.network "private_network", ip: "192.168.56.16"
-    rmq01.vm.provider "virtualbox" do |vb|
-     vb.memory = "600"
-   end
-    rmq01.vm.provision "shell", path: "rabbitmq.sh"  
-  end
+# ### RabbitMQ vm  ####
+#   config.vm.define "rmq01" do |rmq01|
+#     rmq01.vm.box = "eurolinux-vagrant/centos-stream-9"
+#   rmq01.vm.hostname = "rmq01"
+#     rmq01.vm.network "private_network", ip: "192.168.56.16"
+#     rmq01.vm.provider "virtualbox" do |vb|
+#      vb.memory = "600"
+#    end
+#     rmq01.vm.provision "shell", path: "rabbitmq.sh"  
+#   end
   
 ### tomcat vm ###
    config.vm.define "app01" do |app01|
@@ -48,17 +48,28 @@ Vagrant.configure("2") do |config|
    end
    
   
-### Nginx VM ###
-  config.vm.define "web01" do |web01|
-    web01.vm.box = "ubuntu/jammy64"
-    web01.vm.hostname = "web01"
-  web01.vm.network "private_network", ip: "192.168.56.11"
-#  web01.vm.network "public_network"
-  web01.vm.provider "virtualbox" do |vb|
-     vb.gui = true
-     vb.memory = "800"
-   end
-  web01.vm.provision "shell", path: "nginx.sh"  
-end
-  
+# ### Nginx VM ###
+#   config.vm.define "web01" do |web01|
+#     web01.vm.box = "ubuntu/jammy64"
+#     #web01.vm.box = "eurolinux-vagrant/centos-stream-9"
+#     web01.vm.hostname = "web01"
+#     web01.vm.network "private_network", ip: "192.168.56.11"
+#     web01.vm.provider "virtualbox" do |vb|
+#      # vb.gui = true
+#      vb.memory = "800"
+#    end
+#   web01.vm.provision "shell", path: "nginx.sh"  
+# end
+
+### Jenkins vm ###
+config.vm.define "jenkins01" do |jkins01|
+  jkins01.vm.box = "eurolinux-vagrant/centos-stream-9"
+  jkins01.vm.hostname = "jkins01"
+  jkins01.vm.network "private_network", ip: "192.168.56.16"
+  jkins01.vm.provision "shell", path: "jenkins.sh"  
+  jkins01.vm.provider "virtualbox" do |vb|
+    vb.memory = "800"
+  end
+ end
+ 
 end
